# tb3_mobile_manipulation

tb3_mobile_manipulation_description/: CMakeLists.txt  package.xml
tb3_mobile_manipulation_description/launch/: tb3_mobile_manipulation_rviz.launch
tb3_mobile_manipulation_description/rviz/: tb3_mobile_manipulation.rviz
tb3_mobile_manipulation_description/urdf/: common_properties.xacro  tb3_mobile_manipulation.base.gazebo.xacro  tb3_mobile_manipulation.base.urdf.xacro  tb3_mobile_manipulation.manipulator.gazebo.xacro  tb3_mobile_manipulation.manipulator.urdf.xacro  tb3_mobile_manipulation.urdf.xacro
tb3_mobile_manipulation_manager/: CMakeLists.txt  package.xml
tb3_mobile_manipulation_manager/config/: config.yaml  room.yaml  room_test.yaml
tb3_mobile_manipulation_manager/include/tb3_mobile_manipulation_manager/: service.h  task_manager.h  task_manager_moveit.h  task_manager_open_manipulator.h
tb3_mobile_manipulation_manager/launch/: manager_simulation.launch  manager_test.launch
tb3_mobile_manipulation_manager/script/: scenario.yaml  task.yaml
tb3_mobile_manipulation_manager/src/: manager_node.cpp  service.cpp  task_manager.cpp  task_manager.h  task_manager_core.cpp  task_manager_manipulation.cpp  task_manager_manipulation_moveit.cpp  task_manager_mobile.cpp
tb3_mobile_manipulation_simulation/: CMakeLists.txt  package.xml
tb3_mobile_manipulation_simulation/config/: joint_controller.yaml
tb3_mobile_manipulation_simulation/launch/: gazebo_display.launch  joint_controller.launch  manipulator_control_gui.launch  robotis_manipulator_gazebo.launch
tb3_mobile_manipulation_simulation/rviz/: tb3_mobile_manipulation.rviz
tb3_mobile_manipulation_simulation/worlds/: competition_room.world  competition_room_2.world  competition_room_3.world  competition_room_3_0.world  competition_room_4.world  competition_room_proto.world  competition_room_with_object.world  empty_competition_room.world  test.world
tb3_mobile_manipulation_tools/: CMakeLists.txt  package.xml
tb3_mobile_manipulation_tools/launch/: camera_ar_track.launch  (+7 more)
(+37 files in other folders)
