<?xml version="1.0"?>
<package format="2">
  <name>tb3_mobile_manipulation_manager</name>
  <version>0.0.0</version>
  <description>The tb3_mobile_manipulation_manager package</description>

  <maintainer email="kmjung@robotis.com">kayman</maintainer>
  <license>BSD</license>
  <author email="kmjung@robotis.com">kayman</author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <depend>roscpp</depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use depend for packages you need at compile time: -->
  <!--   <depend>message_generation</depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>open_manipulator_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>turtlebot3_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>boost</depend>
  <depend>eigen_conversions</depend>
  <depend>tf</depend>
  <depend>move_base_msgs</depend>
  <depend>roslib</depend>

</package>
